# Infrared-Image-Enhancement

./: .gitignore  README.en.md  README.md  enhance.py  enhance_v2.py  normal.py  pyproject.toml
docs/: dde_formula_breakdown.md  dde_v3_implementation_plan.md
examples/batch/raw/: video-24ysbPEGoEKKDvRt6-frame-000015-ceXK8kdaSPB6ojqyZ.tiff  video-24ysbPEGoEKKDvRt6-frame-000375-P4T5iAtYh9j83P4oY.tiff  video-4FRnNpmSmwktFJKjg-frame-000745-L6K5SC6fYjHNC8uff.tiff  video-4FRnNpmSmwktFJKjg-frame-000763-RtRL7W6Y4TALbkTev.tiff
examples/raw/: video-24ysbPEGoEKKDvRt6-frame-000315-GuYtsQYsAMwBMGqeR.tiff  video-4FRnNpmSmwktFJKjg-frame-000772-FDX5HYmC8RfaoqvDs.tiff
examples/single/: original_16bit.tif  zenmuse_xtr_pure.tiff
ir_dde/: config.py  filters.py  legacy.py  metrics.py  pipeline.py  presets.py  stats.py  tone_map.py
ir_dde/cli/: __init__.py  batch.py  enhance.py  evaluate.py  linear.py  visualize.py
scripts/: evaluate.py  visualize_pipeline.py
src/ir_dde/: __init__.py  presets.py  tone_map.py
tests/: test_metrics.py  test_pipeline.py
